feat: find contract deployed by wallet
